--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,70 +1,66 @@
-name: RDP
-
+name: Secure RDP Access via Tailscale
 
 on:
   workflow_dispatch:
-
 
 jobs:
   secure-rdp:
     runs-on: windows-latest
     timeout-minutes: 3600
 
-
     steps:
-      - name: Configure Core RDP Settings
+      - name: Activer le Bureau à distance (RDP)
         run: |
-          # Enable Remote Desktop and disable Network Level Authentication (if needed)
+          # Active le RDP et désactive NLA si nécessaire
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
-                             -Name "fDenyTSConnections" -Value 0 -Force
+                           -Name "fDenyTSConnections" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
-                             -Name "UserAuthentication" -Value 0 -Force
+                           -Name "UserAuthentication" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
-                             -Name "SecurityLayer" -Value 0 -Force
+                           -Name "SecurityLayer" -Value 0 -Force
 
-
-          # Remove any existing rule with the same name to avoid duplication
-          netsh advfirewall firewall delete rule name="RDP-Tailscale"
+          # Supprime l’ancienne règle si elle existe
+          netsh advfirewall firewall delete rule name="RDP-Tailscale" | Out-Null
           
-          # For testing, allow any incoming connection on port 3389
+          # Autorise le port 3389 (RDP)
           netsh advfirewall firewall add rule name="RDP-Tailscale" `
-            dir=in action=allow protocol=TCP localport=3389
+            dir=in action=allow protocol=TCP localport=3389 | Out-Null
 
-
-          # (Optional) Restart the Remote Desktop service to ensure changes take effect
+          # Redémarre le service RDP pour appliquer les changements
           Restart-Service -Name TermService -Force
 
-
-      - name: Create RDP User with Secure Password
+      - name: Créer un utilisateur RDP sécurisé
+        id: rdpuser
         run: |
           Add-Type -AssemblyName System.Security
           $charSet = @{
-              Upper   = [char[]](65..90)      # A-Z
-              Lower   = [char[]](97..122)     # a-z
-              Number  = [char[]](48..57)      # 0-9
-              Special = ([char[]](33..47) + [char[]](58..64) +
-                         [char[]](91..96) + [char[]](123..126)) # Special characters
+              Upper   = [char[]](65..90)
+              Lower   = [char[]](97..122)
+              Number  = [char[]](48..57)
+              Special = ([char[]](33..47) + [char[]](58..64) + [char[]](91..96) + [char[]](123..126))
           }
+
+          # Génère un mot de passe fort
           $rawPassword = @()
-          $rawPassword += $charSet.Upper | Get-Random -Count 4
-          $rawPassword += $charSet.Lower | Get-Random -Count 4
-          $rawPassword += $charSet.Number | Get-Random -Count 4
-          $rawPassword += $charSet.Special | Get-Random -Count 4
+          $rawPassword += $charSet.Upper | Get-Random -Count 3
+          $rawPassword += $charSet.Lower | Get-Random -Count 3
+          $rawPassword += $charSet.Number | Get-Random -Count 3
+          $rawPassword += $charSet.Special | Get-Random -Count 3
           $password = -join ($rawPassword | Sort-Object { Get-Random })
           $securePass = ConvertTo-SecureString $password -AsPlainText -Force
-          New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires
-          Add-LocalGroupMember -Group "Administrators" -Member "RDP"
-          Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
-          
-          echo "RDP_CREDS=User: RDP | Password: $password" >> $env:GITHUB_ENV
-          
-          if (-not (Get-LocalUser -Name "RDP")) {
-              Write-Error "User creation failed"
-              exit 1
+
+          # Crée l’utilisateur
+          if (-not (Get-LocalUser -Name "RDP" -ErrorAction SilentlyContinue)) {
+            New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires
           }
 
+          Add-LocalGroupMember -Group "Administrators" -Member "RDP"
+          Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
 
-      - name: Install Tailscale
+          # Sauvegarde le mot de passe dans une variable d’environnement masquée
+          echo "RDP_PASSWORD=$password" >> $env:GITHUB_ENV
+
+      - name: Installer Tailscale
         run: |
           $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-1.82.0-amd64.msi"
           $installerPath = "$env:TEMP\tailscale.msi"
@@ -73,50 +69,58 @@ jobs:
           Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/quiet", "/norestart" -Wait
           Remove-Item $installerPath -Force
 
-
-      - name: Establish Tailscale Connection
+      - name: Établir la connexion Tailscale
         run: |
-          # Bring up Tailscale with the provided auth key and set a unique hostname
-          & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-runner-$env:GITHUB_RUN_ID
-          
-          # Wait for Tailscale to assign an IP
+          $hostname = "gh-runner-$env:GITHUB_RUN_ID"
+          & "$env:ProgramFiles\Tailscale\tailscale.exe" up `
+              --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} `
+              --hostname=$hostname `
+              --accept-routes
+
+          # Attente de l’attribution d’une IP
           $tsIP = $null
           $retries = 0
           while (-not $tsIP -and $retries -lt 10) {
-              $tsIP = & "$env:ProgramFiles\Tailscale\tailscale.exe" ip -4
+              $tsIP = (& "$env:ProgramFiles\Tailscale\tailscale.exe" ip -4) | Select-Object -First 1
               Start-Sleep -Seconds 5
               $retries++
           }
-          
+
           if (-not $tsIP) {
-              Write-Error "Tailscale IP not assigned. Exiting."
+              Write-Error "Aucune IP Tailscale attribuée."
               exit 1
           }
+
           echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
-      
-      - name: Verify RDP Accessibility
+
+      - name: Vérifier l’accessibilité RDP
         run: |
-          Write-Host "Tailscale IP: $env:TAILSCALE_IP"
-          
-          # Test connectivity using Test-NetConnection against the Tailscale IP on port 3389
           $testResult = Test-NetConnection -ComputerName $env:TAILSCALE_IP -Port 3389
           if (-not $testResult.TcpTestSucceeded) {
-              Write-Error "TCP connection to RDP port 3389 failed"
+              Write-Error "Échec de la connexion RDP (port 3389)."
               exit 1
           }
-          Write-Host "TCP connectivity successful!"
+          Write-Host "✅ RDP est accessible via Tailscale."
 
-
-      - name: Maintain Connection
+      - name: Afficher les informations d’accès (masquées)
         run: |
-          Write-Host "`n=== RDP ACCESS ==="
-          Write-Host "Address: $env:TAILSCALE_IP"
-          Write-Host "Username: RDP"
-          Write-Host "Password: $(echo $env:RDP_CREDS)"
-          Write-Host "==================`n"
+          Write-Host "`n=== INFORMATIONS RDP (Ne pas partager publiquement) ==="
+          Write-Host "Adresse Tailscale : $env:TAILSCALE_IP"
+          Write-Host "Nom d’utilisateur  : RDP"
+          Write-Host "Mot de passe      : (voir variable RDP_PASSWORD)"
+          Write-Host "===================================================="
           
-          # Keep runner active indefinitely (or until manually cancelled)
+      - name: Maintenir la session active
+        run: |
+          Write-Host "RDP prêt sur $env:TAILSCALE_IP"
+          Write-Host "Session en attente (Ctrl + C pour arrêter)"
           while ($true) {
-              Write-Host "[$(Get-Date)] RDP Active - Use Ctrl+C in workflow to terminate"
               Start-Sleep -Seconds 300
+              Write-Host "[$(Get-Date)] Toujours actif..."
           }
+
+      - name: Nettoyage à la fin (fermeture Tailscale)
+        if: always()
+        run: |
+          Write-Host "Nettoyage en cours..."
+          & "$env:ProgramFiles\Tailscale\tailscale.exe" down
